--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,6 @@ repositories {
 
 dependencies {
     testImplementation group: 'junit', name: 'junit', version: '4.12'
+    implementation 'org.fastily:jwiki:1.8.0'
+
 }
