--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,9 @@ check {
     dependsOn jacocoTestCoverageVerification
 }
 
-
+run {
+    enableAssertions = true
+}
 jacocoTestCoverageVerification {
     violationRules {
         rule {
